# flash-ansr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dfg.md  log.txt  mkdocs.yml  pylint.cfg  pyproject.toml  readthedocs.yaml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pre-commit.yml  publish.yaml  pytest.yml
agent/: ablation-plan.md  analysis-plan.md  camera-ready-todo.md  system-effect-analysis-plan.md  writing-decisions.md
configs/: VERSIONS.md
configs/PySR-default/: evaluation.yaml
configs/PySR_niterations/: evaluation_niterations_1.yaml  evaluation_niterations_1024.yaml  evaluation_niterations_128.yaml  evaluation_niterations_16.yaml  evaluation_niterations_16384.yaml  evaluation_niterations_2.yaml  evaluation_niterations_2048.yaml  evaluation_niterations_256.yaml  evaluation_niterations_32.yaml  evaluation_niterations_32768.yaml  evaluation_niterations_4.yaml  evaluation_niterations_4096.yaml  evaluation_niterations_512.yaml  evaluation_niterations_64.yaml  evaluation_niterations_8.yaml  evaluation_niterations_8192.yaml
configs/hard_set/: expression_space.yaml
configs/nesymres-100M/: config.yaml  eq_config.json  evaluation.yaml
configs/pool_15/: expression_space.yaml  skeleton_pool.yaml
configs/pysr/: evaluation.yaml
configs/test/: catalog_quantized.yaml  catalog_quantized_no_transform.yaml  catalog_train.yaml  dataset_train.yaml  dataset_val.yaml
configs/test_set/: catalog.yaml  skeleton_pool.yaml
configs/v10.0/: nsr.yaml
configs/v11.0/: skeleton_pool_train.yaml  train.yaml
configs/v12.0/: dataset_val.yaml  evaluation.yaml  expression_space.yaml  nsr.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v13.0/: nsr.yaml  skeleton_pool_train.yaml
configs/v14.0/: dataset_val.yaml  evaluation.yaml  expression_space.yaml  nsr.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v15.0/: model.yaml  nsr.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  tokenizer.yaml  train.yaml
configs/v16.0/: model-M.yaml  model.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v17.0/: model.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v18.0-m/: model.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v18.0-m-contrastive_encoder/: contrastive_encoder.yaml  skeleton_pool_train.yaml  train.yaml
configs/v18.0-m-dino_encoder/: dino_encoder.yaml  skeleton_pool_train.yaml  train.yaml
configs/v18.0-s/: model.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml  train.yaml
configs/v19.0-160M/: model.yaml  skeleton_pool_train.yaml  skeleton_pool_val.yaml
configs/v19.0-17M/: model.yaml  skeleton_pool_train.yaml
configs/v19.0-40M/: model.yaml  train.yaml
docs/: api.md  concepts.md  contributing.md  evaluation.md  faq.md  getting_started.md  index.md  training.md
experimental/: aabb.ipynb  analyze_model.ipynb  axis_attention.ipynb  capacity.ipynb  complexity_classifier.ipynb  contamination.ipynb  contrastive_learning.ipynb  control_formatter.ipynb  copy.ipynb  data_analysis_complexity.ipynb  data_train_experimental.ipynb  dataframe_results.ipynb  demo copy.ipynb  demo.ipynb  demo2.ipynb  diffusion.ipynb  double_equivatiance.ipynb  expand_config.ipynb  extract_expression_from_beam.ipynb  foundational_encoder.ipynb  fvu_examples.ipynb  general_sampling.ipynb  generate_for_rl.ipynb  hash_cache.ipynb  histories.pkl  ieee754_32b.ipynb  infix_reduced_parentheses.ipynb  learn_simplification.ipynb  metric_learning.ipynb  mini.ipynb  model_size.ipynb  norms.ipynb  profile_simplification.py  refactor_set_transformer.ipynb  rl.ipynb  scaling_law_fit.ipynb  set_encoders.ipynb  softmax.ipynb  tanh15.ipynb  term_cancellation.ipynb  (+5 more)
nsrops/: .gitignore  .pre-commit-config.yaml  pyproject.toml
nsrops/src/nsrops/: __init__.py  add.py  bessel.py  chebyshev.py  multiply.py  power.py
scripts/: contrastive.sh  debug_prompt_sections.py  dino.sh  evaluate.sh  evaluate_22.x-60M.sh  evaluate_PySR.py  evaluate_PySR.sh  evaluate_PySR_niterations.sh  evaluate_all.sh  evaluate_analysis_beams_multi.sh  evaluate_analysis_checkpoints.sh  evaluate_analysis_choices_multi.sh  evaluate_analysis_noise_multi.sh  evaluate_analysis_points_multi.sh  evaluate_analysis_restarts_multi.sh  evaluate_choices.sh  evaluate_many.sh  evaluate_n_support.sh  evaluate_nesymres.sh  evaluate_noise_all.sh  evaluate_pysr.sh  evaluate_support_all.sh  find_rules.sh  generate_test_set.sh  generate_validation_set.sh  import_test_sets.sh  patch_symbolicregression.py  profile_data_generation.py  pylint.sh  pytest.sh  radon.sh  rename_ablations_solomon.sh  rerun_C1_uniform.sh  rerun_ablation2.sh  run.sh  run2.sh  run712.sh  run80.sh  run_candidate_probe.sh  run_full_evaluation.sh  (+3 more)
tests/: test_convert_data.py  test_data.py  test_flash_ansr_prompt.py  test_inference.py  test_inference_ledger.py  test_numeric_head.py  test_preprocess_features.py  test_preprocess_rng.py  test_prior_sampling.py  test_public_api_contract.py  test_refine.py  test_refine_determinism.py  test_refine_pool.py  test_results_serialization.py  test_scoring.py  test_simplipy_migration.py  test_symbolic_data_contract.py
(+639 files in other folders)
