[project]
name = "flash_ansr"
description = "Flash-ANSR: Fast Amortized Neural Symbolic Regression - Discover symbolic expressions from tabular data using SetTransformer and Transformer architectures"
authors = [
    {name = "Paul Saegert", email = "psaegert@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
version = "0.5.0"
license = "MIT"
license-files = ["LICEN[CS]E*", "THIRD_PARTY_LICENSES*"]

keywords = [
    "symbolic-regression",
    "neural-symbolic-regression",
    "simulation-based-inference",
    "transformer",
    "set-transformer",
    "machine-learning",
    "pytorch",
    "expression-discovery",
    "equation-discovery",
    "tabular-data",
    "mathematical-modeling",
    "amortized-inference",
    "benchmarking"
]

classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # Intended audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    # Topic areas - focus on core functionality
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # Programming language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    # Operating system
    "Operating System :: OS Independent",

    # Typing
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/psaegert/flash-ansr"
Documentation = "https://flash-ansr.readthedocs.io/en/latest/"
Repository = "https://github.com/psaegert/flash-ansr"
Issues = "https://github.com/psaegert/flash-ansr/issues"
Changelog = "https://github.com/psaegert/flash-ansr/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/flash-ansr/"
Paper = "https://arxiv.org/abs/2602.08885"
"Benchmarks (srbf)" = "https://github.com/psaegert/srbf"
"Demo Notebook" = "https://github.com/psaegert/flash-ansr/blob/main/experimental/demo.ipynb"

[project.scripts]
flash_ansr = "flash_ansr.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "pygount",
    "pylint",
    "types-setuptools",
    "types-tqdm",
    "types-toml",
    "types-PyYAML",
    "radon",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings",
    "mkdocs-get-deps",
    "mkdocs-material-extensions",
    "mkdocstrings-python",
    "flash_ansr[baselines]"
]

# Optional: required only to run the third-party baseline model adapters (E2E, NeSymReS) in
# flash_ansr.eval. The flash-ansr product itself does NOT use sympy (it simplifies via simplipy).
# In the planned srbf split this extra moves to that repo. See REPO_SPLIT_PLAN.md.
baselines = [
    "sympy>=1.10",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
# Ship production code only; the interp research subpackage is clone-only (not in the wheel).
exclude = ["flash_ansr.interp*"]


[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "platformdirs==3.10.0",
]
build-backend = "setuptools.build_meta"


[tool.flake8]
ignore = ["E501", "W503"]
exclude = [
    ".git",
	"__pycache__",
	"documentation",
	"build",
	"venv",
	".venv",
	"env",
	".env",
	"images",
]
per-file-ignores = "__init__.py:F401"


[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = "(.venv|tests/|experimental/|src/flash_ansr/compat/nesymres.py)"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:This process .*use of fork.*deadlocks in the child.:DeprecationWarning",
]
